Finished doc, refactor, changed Java version
Switched to Java 17, the oldest LTS after records were introduced